// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Expenses: 
    1
     
    expense
     Total: 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Expenses: 
    23
     
    expenses
     Total: 
    $235,123,409.87
  </h1>
</div>
`;
